simpleParser.java
// $ANTLR 3.5.2 simple.g 2025-12-10 09:55:06

    import java.util.HashMap;
    import java.util.Map;
    import java.util.Set;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class simpleParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BOOLEAN", "CCURLYB", "CFLOAT", 
		"CINT", "CLASS", "DO", "DOT", "DOUBLE", "ID", "INT", "LPAREN", "OCURLYB", 
		"PRIVATE", "PROTECTED", "PUBLIC", "RETURN", "RPAREN", "SEMICOLON", "WHILE", 
		"WS", "'!='", "'*'", "'+'", "','", "'-'", "'/'", "'<'", "'<='", "'='", 
		"'=='", "'>'", "'>='"
	};
	public static final int EOF=-1;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int BOOLEAN=4;
	public static final int CCURLYB=5;
	public static final int CFLOAT=6;
	public static final int CINT=7;
	public static final int CLASS=8;
	public static final int DO=9;
	public static final int DOT=10;
	public static final int DOUBLE=11;
	public static final int ID=12;
	public static final int INT=13;
	public static final int LPAREN=14;
	public static final int OCURLYB=15;
	public static final int PRIVATE=16;
	public static final int PROTECTED=17;
	public static final int PUBLIC=18;
	public static final int RETURN=19;
	public static final int RPAREN=20;
	public static final int SEMICOLON=21;
	public static final int WHILE=22;
	public static final int WS=23;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public simpleParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public simpleParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return simpleParser.tokenNames; }
	@Override public String getGrammarFileName() { return "simple.g"; }


	    // -----------------------------
	    // Tablas y contadores
	    // -----------------------------
	    public HashMap<String, Integer> TSG = new HashMap<String, Integer>(); // Global: clases, métodos, atributos
	    public HashMap<String, Integer> TSL = new HashMap<String, Integer>(); // Local: variables/args del método actual
	    public HashMap<String, Integer> TArgs = new HashMap<String, Integer>(); // Args temporales antes de entrar al método

	    // Conteo de llamadas a métodos (UNFOLDING)
	    public HashMap<String, Integer> metodoLlamadas = new HashMap<String, Integer>();
	    // Conteo de marcas de metodos reducibles
	    public HashMap<String, Boolean> metodoReducible = new HashMap<String, Boolean>();


	    // Conteo de errores por método y global
	    public HashMap<String, Integer> erroresPorMetodo = new HashMap<String, Integer>();
	    public int erroresGlobal = 0;
	    public String metodoActual = null;

	    private javax.swing.JTextArea salida;

	    public void setSalida(javax.swing.JTextArea _salida) {
	        salida = _salida;
	    }

	    // Registra error sintáctico (emitErrorMessage es llamado por ANTLR a errores léx/sint)
	    @Override
	    public void emitErrorMessage(String msg) {
	        registrarError("Error sintáctico: " + msg);
	    }

	    // Helper para registrar errores (incrementa global y por método si aplica)
	    public void registrarError(String msg) {
	        if (salida != null) salida.append(msg + "\n");
	        erroresGlobal++;
	        if (metodoActual != null) {
	            Integer v = erroresPorMetodo.get(metodoActual);
	            if (v == null) v = 0;
	            erroresPorMetodo.put(metodoActual, v + 1);
	        }
	    }

	    // Añade símbolo a la tabla indicada (TSG, TSL, TArgs)
	    public void addSymbol(HashMap<String, Integer> tabla, String id, String tipo){
	        int code;
	        if ("int".equals(tipo)) code = 1;
	        else if ("double".equals(tipo)) code = 2;
	        else if ("boolean".equals(tipo)) code = 4;
	        else code = 3;

	        if (!tabla.containsKey(id)) {
	            tabla.put(id, code);
	            if (salida != null) salida.append("Agregando símbolo: " + id + " tipo: " + tipo + "\n");
	        } else {
	            registrarError("Error: símbolo redeclarado (" + id + ")");
	        }
	    }

	    // Busca símbolo: primero TSL (local), luego TSG (global)
	    public int searchSymbol(String id) {
	        Integer existe = TSL.get(id);
	        if (existe != null) return existe;
	        existe = TSG.get(id);
	        if (existe != null) return existe;
	        registrarError("ID no declarado: " + id);
	        return 3; // error type
	    }

	    // Imprime tablas (puedes quitar llamadas excesivas si es ruidoso)
	    public void printTables() {
	        if (salida == null) return;
	        salida.append("\n--- Tabla Global (TSG) ---\n");
	        for (String key : TSG.keySet()) {
	            salida.append(key + " -> " + TSG.get(key) + "\n");
	        }
	        salida.append("--- Tabla Local (TSL) ---\n");
	        for (String key : TSL.keySet()) {
	            salida.append(key + " -> " + TSL.get(key) + "\n");
	        }
	        salida.append("--------------------------\n");
	    }

	    // Llamada a incrementar contador de llamada de método (si existe en mapa)
	    public void registrarLlamadaMetodo(String id) {
	        if (id == null) return;
	        Integer v = metodoLlamadas.get(id);
	        if (v != null) {
	            metodoLlamadas.put(id, v + 1);
	        } else {
	            // si no existe en mapa, no hacemos nada (podría ser llamada a método externo/no declarado)
	            // opcional: registrarError("Llamada a método no declarado: " + id);
	        }
	    }

	    // Reporte UNFOLDING: métodos nunca llamados o solo 1 vez al finalizar clase
	    public void reporteUnfoldingParaClase(String nombreClase) {
	        if (salida == null) return;
	        salida.append("\n--- OPTIMIZACIÓN UNFOLDING (Clase: " + nombreClase + ") ---\n");
	        Set<Map.Entry<String,Integer>> entries = metodoLlamadas.entrySet();
	        for (Map.Entry<String,Integer> e : entries) {
	            String metodo = e.getKey();
	            int count = e.getValue();
	            if (count == 0) {
	                salida.append("OPT-UNF-01: Método '" + metodo + "' NUNCA es llamado (optimizable)\n");
	            } else if (count == 1) {
	                salida.append("OPT-UNF-02: Método '" + metodo + "' es llamado solo UNA VEZ (posible inlining/optimización)\n");
	            }
	        }
	        // Unfolding tipo 3
	for (String m : metodoReducible.keySet()) {
	    Boolean r = metodoReducible.get(m);
	    if (r != null && r == true) {
	        salida.append("OPT-UNF-03: El método '" + m + "' es reducible (puede inline completo)\n");
	    }
	}

	        salida.append("--- FIN OPTIMIZACIÓN UNFOLDING ---\n");
	    }



	// $ANTLR start "program"
	// simple.g:134:1: program : ( theClass )+ ;
	public final void program() throws RecognitionException {
		try {
			// simple.g:135:5: ( ( theClass )+ )
			// simple.g:135:7: ( theClass )+
			{
			// simple.g:135:7: ( theClass )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= PRIVATE && LA1_0 <= PUBLIC)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// simple.g:135:7: theClass
					{
					pushFollow(FOLLOW_theClass_in_program31);
					theClass();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}


			        if (salida != null) {
			            salida.append("\n--- Análisis completado ---\n");
			            salida.append("Total de errores en el programa: " + erroresGlobal + "\n");
			        }
			    
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "theClass"
	// simple.g:146:1: theClass : accessModif CLASS id1= ID OCURLYB ( member )* CCURLYB ;
	public final void theClass() throws RecognitionException {
		Token id1=null;

		try {
			// simple.g:147:5: ( accessModif CLASS id1= ID OCURLYB ( member )* CCURLYB )
			// simple.g:147:7: accessModif CLASS id1= ID OCURLYB ( member )* CCURLYB
			{
			pushFollow(FOLLOW_accessModif_in_theClass54);
			accessModif();
			state._fsp--;

			match(input,CLASS,FOLLOW_CLASS_in_theClass56); 
			id1=(Token)match(input,ID,FOLLOW_ID_in_theClass60); 

			          // registrar clase en TSG (tipo 'class' como code 3 por convención)
			          addSymbol(TSG, (id1!=null?id1.getText():null), "class");
			          // limpiar mapas de conteo de llamadas para la nueva clase
			          // NOTA: asumimos un análisis por clase; reiniciamos metodoLlamadas aquí
			          metodoLlamadas.clear();
			      
			match(input,OCURLYB,FOLLOW_OCURLYB_in_theClass70); 
			// simple.g:154:15: ( member )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==BOOLEAN||LA2_0==DOUBLE||LA2_0==INT||(LA2_0 >= PRIVATE && LA2_0 <= PUBLIC)) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// simple.g:154:15: member
					{
					pushFollow(FOLLOW_member_in_theClass72);
					member();
					state._fsp--;

					}
					break;

				default :
					break loop2;
				}
			}

			match(input,CCURLYB,FOLLOW_CCURLYB_in_theClass75); 

			          // Al finalizar la clase, emitir reporte UNFOLDING
			          reporteUnfoldingParaClase((id1!=null?id1.getText():null));
			      
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "theClass"



	// $ANTLR start "member"
	// simple.g:162:1: member : ( method | property );
	public final void member() throws RecognitionException {
		try {
			// simple.g:163:5: ( method | property )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( ((LA3_0 >= PRIVATE && LA3_0 <= PUBLIC)) ) {
				int LA3_1 = input.LA(2);
				if ( (LA3_1==BOOLEAN||LA3_1==DOUBLE||LA3_1==INT) ) {
					int LA3_2 = input.LA(3);
					if ( (LA3_2==ID) ) {
						int LA3_3 = input.LA(4);
						if ( (LA3_3==LPAREN) ) {
							alt3=1;
						}
						else if ( (LA3_3==SEMICOLON||LA3_3==27) ) {
							alt3=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 3, 3, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 3, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA3_0==BOOLEAN||LA3_0==DOUBLE||LA3_0==INT) ) {
				int LA3_2 = input.LA(2);
				if ( (LA3_2==ID) ) {
					int LA3_3 = input.LA(3);
					if ( (LA3_3==LPAREN) ) {
						alt3=1;
					}
					else if ( (LA3_3==SEMICOLON||LA3_3==27) ) {
						alt3=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 3, 3, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// simple.g:163:7: method
					{
					pushFollow(FOLLOW_method_in_member101);
					method();
					state._fsp--;

					}
					break;
				case 2 :
					// simple.g:164:7: property
					{
					pushFollow(FOLLOW_property_in_member109);
					property();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "member"



	// $ANTLR start "property"
	// simple.g:168:1: property : ( accessModif )? t= type id1= ID ( ',' id2= ID )* SEMICOLON ;
	public final void property() throws RecognitionException {
		Token id1=null;
		Token id2=null;
		ParserRuleReturnScope t =null;

		try {
			// simple.g:169:5: ( ( accessModif )? t= type id1= ID ( ',' id2= ID )* SEMICOLON )
			// simple.g:169:7: ( accessModif )? t= type id1= ID ( ',' id2= ID )* SEMICOLON
			{
			// simple.g:169:7: ( accessModif )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( ((LA4_0 >= PRIVATE && LA4_0 <= PUBLIC)) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// simple.g:169:8: accessModif
					{
					pushFollow(FOLLOW_accessModif_in_property128);
					accessModif();
					state._fsp--;

					}
					break;

			}

			pushFollow(FOLLOW_type_in_property134);
			t=type();
			state._fsp--;

			id1=(Token)match(input,ID,FOLLOW_ID_in_property138); 

			          addSymbol(TSG, (id1!=null?id1.getText():null), (t!=null?input.toString(t.start,t.stop):null));
			      
			// simple.g:172:7: ( ',' id2= ID )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==27) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// simple.g:172:8: ',' id2= ID
					{
					match(input,27,FOLLOW_27_in_property149); 
					id2=(Token)match(input,ID,FOLLOW_ID_in_property153); 
					 addSymbol(TSG, (id2!=null?id2.getText():null), (t!=null?input.toString(t.start,t.stop):null)); 
					}
					break;

				default :
					break loop5;
				}
			}

			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_property165); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "property"



	// $ANTLR start "method"
	// simple.g:179:1: method : ( accessModif )? retType= type id1= ID LPAREN ( decla_args )? RPAREN OCURLYB ( sentences )* CCURLYB ;
	public final void method() throws RecognitionException {
		Token id1=null;
		ParserRuleReturnScope retType =null;

		try {
			// simple.g:180:5: ( ( accessModif )? retType= type id1= ID LPAREN ( decla_args )? RPAREN OCURLYB ( sentences )* CCURLYB )
			// simple.g:180:7: ( accessModif )? retType= type id1= ID LPAREN ( decla_args )? RPAREN OCURLYB ( sentences )* CCURLYB
			{
			// simple.g:180:7: ( accessModif )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( ((LA6_0 >= PRIVATE && LA6_0 <= PUBLIC)) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// simple.g:180:8: accessModif
					{
					pushFollow(FOLLOW_accessModif_in_method186);
					accessModif();
					state._fsp--;

					}
					break;

			}

			pushFollow(FOLLOW_type_in_method192);
			retType=type();
			state._fsp--;

			id1=(Token)match(input,ID,FOLLOW_ID_in_method196); 

			            // Registrar método globalmente (TSG) y en contadores de llamadas y errores
			            addSymbol(TSG, (id1!=null?id1.getText():null), (retType!=null?input.toString(retType.start,retType.stop):null));
			            metodoLlamadas.put((id1!=null?id1.getText():null), 0);            // UNFOLDING: inicializa contador de llamadas
			            erroresPorMetodo.put((id1!=null?id1.getText():null), 0);          // inicializa contador de errores por método
			            metodoActual = (id1!=null?id1.getText():null);                    // establecer el método actual para contabilizar errores
			            metodoReducible.put((id1!=null?id1.getText():null), true);   // asumimos reducible hasta que se detecte algo no reducible
			            if (salida != null) salida.append("\n>> Analizando método: " + metodoActual + "\n");
			        
			match(input,LPAREN,FOLLOW_LPAREN_in_method214); 
			// simple.g:190:14: ( decla_args )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==BOOLEAN||LA7_0==DOUBLE||LA7_0==INT) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// simple.g:190:14: decla_args
					{
					pushFollow(FOLLOW_decla_args_in_method216);
					decla_args();
					state._fsp--;

					}
					break;

			}

			match(input,RPAREN,FOLLOW_RPAREN_in_method219); 

			          // Al entrar al cuerpo: limpiar tabla local y volcar argumentos
			          TSL.clear();
			          if (!TArgs.isEmpty()) {
			              TSL.putAll(TArgs);
			              TArgs.clear();
			          }
			          // imprimir tabla inicial opcional
			          printTables();
			      
			match(input,OCURLYB,FOLLOW_OCURLYB_in_method235); 
			// simple.g:201:15: ( sentences )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==BOOLEAN||LA8_0==DO||(LA8_0 >= DOUBLE && LA8_0 <= INT)||LA8_0==RETURN) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// simple.g:201:15: sentences
					{
					pushFollow(FOLLOW_sentences_in_method237);
					sentences();
					state._fsp--;

					}
					break;

				default :
					break loop8;
				}
			}

			match(input,CCURLYB,FOLLOW_CCURLYB_in_method240); 

			          // Al salir del método: reportar errores de este método
			          Integer ecount = erroresPorMetodo.get(metodoActual);
			          if (ecount == null) ecount = 0;
			          if (salida != null) salida.append("<< FIN de método '" + metodoActual + "' — Errores detectados: " + ecount + " (ERR-M)\n");
			          // limpiar metodoActual
			          metodoActual = null;
			      
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "method"



	// $ANTLR start "decla_args"
	// simple.g:213:1: decla_args : t1= type id1= ID ( ',' t2= type id2= ID )* ;
	public final void decla_args() throws RecognitionException {
		Token id1=null;
		Token id2=null;
		ParserRuleReturnScope t1 =null;
		ParserRuleReturnScope t2 =null;

		try {
			// simple.g:214:5: (t1= type id1= ID ( ',' t2= type id2= ID )* )
			// simple.g:214:7: t1= type id1= ID ( ',' t2= type id2= ID )*
			{
			pushFollow(FOLLOW_type_in_decla_args268);
			t1=type();
			state._fsp--;

			id1=(Token)match(input,ID,FOLLOW_ID_in_decla_args272); 
			 addSymbol(TArgs, (id1!=null?id1.getText():null), (t1!=null?input.toString(t1.start,t1.stop):null)); 
			// simple.g:215:7: ( ',' t2= type id2= ID )*
			loop9:
			while (true) {
				int alt9=2;
				int LA9_0 = input.LA(1);
				if ( (LA9_0==27) ) {
					alt9=1;
				}

				switch (alt9) {
				case 1 :
					// simple.g:215:8: ',' t2= type id2= ID
					{
					match(input,27,FOLLOW_27_in_decla_args283); 
					pushFollow(FOLLOW_type_in_decla_args287);
					t2=type();
					state._fsp--;

					id2=(Token)match(input,ID,FOLLOW_ID_in_decla_args291); 
